Tratamento de dados da Camada Silver.
Tratamento inicial da tabela: conversão de tipos de dados e verificação de valores nulos.

--- a/src/pipeline/02_bronze_ingest_raw.ipynb
+++ b/src/pipeline/02_bronze_ingest_raw.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "bc13815b-3df4-4dac-b4c1-45ca4dfe5691",
      "showTitle": false,
@@ -20,7 +23,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "7ce77790-ce6f-4bdb-b4fe-2d4ffeb39956",
      "showTitle": false,
@@ -96,7 +102,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "ac5e511a-c479-4dfa-b345-193c3ad19f5a",
      "showTitle": false,
