Feature Engineering Feito
Com este processo, enriquecemos os dados do dataframe transactions, agregando informações valiosas.

--- a/src/pipeline/03_silver_treatment.ipynb
+++ b/src/pipeline/03_silver_treatment.ipynb
@@ -225,6 +225,7 @@
    "outputs": [],
    "source": [
     "customer = customer \\\n",
+    "    .withColumn(\"CUSTOMER_ID\", col(\"CUSTOMER_ID\").cast(\"int\")) \\\n",
     "    .withColumn(\"x_customer_id\", col(\"x_customer_id\").cast(\"double\")) \\\n",
     "    .withColumn(\"y_customer_id\", col(\"y_customer_id\").cast(\"double\")) \\\n",
     "    .withColumn(\"mean_amount\", col(\"mean_amount\").cast(\"double\")) \\\n",
@@ -532,6 +533,7 @@
    "outputs": [],
    "source": [
     "terminal = terminal \\\n",
+    "    .withColumn(\"TERMINAL_ID\", col(\"TERMINAL_ID\").cast(\"int\")) \\\n",
     "    .withColumn(\"x_terminal_id\", col(\"x_terminal_id\").cast(\"double\")) \\\n",
     "    .withColumn(\"y_terminal_id\", col(\"y_terminal_id\").cast(\"double\"))\n"
    ]
@@ -785,6 +787,9 @@
    "outputs": [],
    "source": [
     "transactions = transactions \\\n",
+    "    .withColumn(\"TRANSACTION_ID\", col(\"TRANSACTION_ID\").cast(\"int\")) \\\n",
+    "    .withColumn(\"CUSTOMER_ID\", col(\"CUSTOMER_ID\").cast(\"int\")) \\\n",
+    "    .withColumn(\"TERMINAL_ID\", col(\"TERMINAL_ID\").cast(\"int\")) \\\n",
     "    .withColumn(\"TX_DATETIME\", to_timestamp(col(\"TX_DATETIME\"), \"yyyy-MM-dd HH:mm:ss\")) \\\n",
     "    .withColumn(\"TX_AMOUNT\", col(\"TX_AMOUNT\").cast(\"double\")) \\\n",
     "    .withColumn(\"TX_TIME_SECONDS\", col(\"TX_TIME_SECONDS\").cast(\"int\")) \\\n",
